--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -28,9 +28,11 @@
     <!-- Scripts -->
       <script defer src="/assets/scripts.js"></script>
       <script defer src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
-      <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-      <% if( page.title == 'contact' ){ %>
-        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+      <% if( page.title == 'Home' ){ %>
+        <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+      <% } %>
+      <% if( page.title == 'Contact' ){ %>
+        <script defer src="https://www.google.com/recaptcha/api.js"></script>
       <% } %>
     <!-- Favicon -->
       <%- partial('partial/favicon')%>
