--- a/themes/lyon-theme/layout/partial/newsletter-cta.ejs
+++ b/themes/lyon-theme/layout/partial/newsletter-cta.ejs
@@ -2,6 +2,6 @@
   <img src="/assets/images/global-forum-16-signing.jpeg">
   <div class="container">
     <p>Want to receive news & opportunities from the Global Council and partners in your inbox?</p>
-    <a class="button" href="/mailchimp" target="_blank">Sign-up to our newsletter!</a>
+    <a class="button" href="https://juniorenterprise.us17.list-manage.com/subscribe?u=af92182386ba181d027b1b1be&id=5cea53ea52" target="_blank">Sign-up to our newsletter!</a>
   </div>
 </section>
