--- a/themes/lyon-theme/layout/pages/confederations.ejs
+++ b/themes/lyon-theme/layout/pages/confederations.ejs
@@ -19,116 +19,11 @@
     <h3>The network</h3>
     <p>The following confederations are part of the <a href="/global-council">Junior Enterprise Global Council</a>:</p>
     <div class="deck">
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/brasil-junior.png" alt="Brasil Júnior Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>Brasil Júnior</h5>
-              <p>615+ JEs</p>
-              <p><a href="https://brasiljunior.org.br/">brasiljunior.org.br</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/brasiljunior/"><i class="fab fa-facebook-f"></i></a>
-                <a class="social-link" href="https://www.instagram.com/bjnoinsta/"><i class="fab fa-instagram"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/cjem.png" alt="CJEM Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>CJEM (Morocco)</h5>
-              <p>8+ JEs</p>
-              <p><a href="http://www.cjem.ma/">www.cjem.ma</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/Confederation.des.Junior.Entreprises.Marocaines/"><i class="fab fa-facebook-f"></i></a>
-                <a class="social-link" href="https://twitter.com/C_J_E_M/media"><i class="fab fa-twitter"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/cnje.png" alt="CNJE Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>CNJE (France)</h5>
-              <p>180+ JEs</p>
-              <p><a href="https://junior-entreprises.com/">junior-entreprises.com</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/junior.entreprises/"><i class="fab fa-facebook-f"></i></a>
-                <a class="social-link" href="https://www.instagram.com/cnje/"><i class="fab fa-instagram"></i></a>
-                <a class="social-link" href="https://twitter.com/cnje"><i class="fab fa-twitter"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/jade.png" alt="JADE Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>JADE (Europe)</h5>
-              <p>346+ JEs (Including CNJE)</p>
-              <p><a href="http://www.jadenet.org/">www.jadenet.org</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/JADE.Network/"><i class="fab fa-facebook-f"></i></a>
-                <a class="social-link" href="https://www.instagram.com/jade_network/"><i class="fab fa-instagram"></i></a>
-                <a class="social-link" href="https://twitter.com/JADEnetwork"><i class="fab fa-twitter"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/jc3.png" alt="JC3 Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>JC3 (Canada)</h5>
-              <p>6+ JEs</p>
-              <p><a href="https://jc3.ca/">jc3.ca</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/jc3.ca/"><i class="fab fa-facebook-f"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/jecam.png" alt="JECam Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>JECam (Cameroon)</h5>
-              <p>9+ JEs</p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/juniorentreprisecameroun/"><i class="fab fa-facebook-f"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/jet.png" alt="JET Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>JET (Tunisia)</h5>
-              <p>38+ JEs</p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/JuniorEnterprisesOfTunisia/"><i class="fab fa-facebook-f"></i></a>
-                <a class="social-link" href="https://www.instagram.com/jetunisia/"><i class="fab fa-instagram"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/jeusa.png" alt="JE USA Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>Junior Enterprise USA</h5>
-              <p>4+ JEs</p>
-              <p><a href="https://www.juniorenterprise.us/">www.juniorenterprise.us</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/juniorenterpriseUSA/"><i class="fab fa-facebook-f"></i></a>
-                <a class="social-link" href="https://www.instagram.com/juniorenterpriseusa/"><i class="fab fa-instagram"></i></a>
-              </p>
-            </div>
-      </div>
+      <% site.posts.forEach(function(confederation){ %>
+        <% if(confederation.type=='confederation'){ %>
+          <%- partial('partial/confederation-card', { confederation: confederation }) %>
+        <% } %>
+      <% }) %>
       <div class="horizontal card bg-map-1">
         <div class="twelve columns" style="text-align: center;">
           <h4>More coming soon!</h4>
@@ -138,196 +33,16 @@
     <br>
     <p>Through JADE, the European confederation, the following confederations or consultative members are also represented in the JE Global Council:</p>
     <div class="deck">
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/bdsu.png" alt="BDSU Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>BDSU (Germany)</h5>
-              <p>32+ JEs</p>
-              <p><a href="https://www.bdsu.de/">www.bdsu.de</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/BDSUev/"><i class="fab fa-facebook-f"></i></a>
-                <a class="social-link" href="https://www.instagram.com/bdsu_e.v/"><i class="fab fa-instagram"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/ceje.png" alt="CEJE Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>CEJE (Spain)</h5>
-              <p>15+ JEs</p>
-              <p><a href="http://ceje.org/">ceje.org</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/CEJE.network/"><i class="fab fa-facebook-f"></i></a>
-                <a class="social-link" href="https://www.instagram.com/ceje.network/"><i class="fab fa-instagram"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/jade-austria.png" alt="JADE Austria Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>JADE Austria</h5>
-              <p>5+ JEs</p>
-              <p><a href="http://www.jadeaustria.at/">www.jadeaustria.at</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/jadeaustria.network/"><i class="fab fa-facebook-f"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/jade-belgium.png" alt="JADE Belgium Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>JADE Belgium</h5>
-              <p>16+ JEs</p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/JADE.Belgium/"><i class="fab fa-facebook-f"></i></a>
-                <a class="social-link" href="https://www.instagram.com/jadebelgium1/"><i class="fab fa-instagram"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/jade-italia.png" alt="JADE Italia Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>JADE Italia</h5>
-              <p>17+ JEs</p>
-              <p><a href="https://jadeitalia.org/">jadeitalia.org</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/jadeitalia.org/"><i class="fab fa-facebook-f"></i></a>
-                <a class="social-link" href="https://www.instagram.com/jade.italia/"><i class="fab fa-instagram"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/jade-poland.png" alt="JADE Poland Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>JADE Poland</h5>
-              <p>3+ JEs</p>
-              <p><a href="http://jadepl.org/">jadepl.org</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/JADEPoland/"><i class="fab fa-facebook-f"></i></a>
-                <a class="social-link" href="https://www.instagram.com/juniorenterpriseusa/"><i class="fab fa-instagram"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/jade-portugal.png" alt="JADE Portugal Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>JADE Portugal</h5>
-              <p>14+ JEs</p>
-              <p><a href="https://www.jadeportugal.pt/">www.jadeportugal.pt</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/jadeportugal/"><i class="fab fa-facebook-f"></i></a>
-                <a class="social-link" href="https://www.instagram.com/jade__pt/"><i class="fab fa-instagram"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/jade-romania.png" alt="JADE Romania Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>JADE Romania</h5>
-              <p>5+ JEs</p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/JADEromania/"><i class="fab fa-facebook-f"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/jade-switzerland.png" alt="JADE Switzerland Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>JADE Switzerland</h5>
-              <p>10+ JEs</p>
-              <p><a href="http://www.jadeswitzerland.ch/">www.jadeswitzerland.ch</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/switzerland.jade/"><i class="fab fa-facebook-f"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/jcnetwork.png" alt="JCNetwork Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>JCNetwork (Germany)</h5>
-              <p>34+ JEs</p>
-              <p><a href="https://www.jcnetwork.de/">www.jcnetwork.de</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/JCNetwork/"><i class="fab fa-facebook-f"></i></a>
-                <a class="social-link" href="https://www.instagram.com/juniorconsultantnetwork"><i class="fab fa-instagram"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/unipartners.png" alt="UniPartners Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>UniPartners (Netherlands)</h5>
-              <p>12+ JEs</p>
-              <p><a href="https://www.unipartners.nl/">www.unipartners.nl</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/UniPartners.up"><i class="fab fa-facebook-f"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/wbc.png" alt="WBC Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>WBC (UK)</h5>
-              <p>Consultative Member</p>
-              <p><a href="http://www.wbc-uk.com/">www.wbc-uk.com</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/wbcuk/"><i class="fab fa-facebook-f"></i></a>
-                <a class="social-link" href="https://www.instagram.com/wbc.uk/"><i class="fab fa-instagram"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/handels-consulting.png" alt="Handels Consulting Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>Handels Consulting (Sweden)</h5>
-              <p>Consultative Member</p>
-              <p><a href="http://www.handelsconsulting.se/">www.handelsconsulting.se</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/HandelsConsulting-84275850204/"><i class="fab fa-facebook-f"></i></a>
-                <a class="social-link" href="https://www.instagram.com/handelsconsulting/"><i class="fab fa-instagram"></i></a>
-              </p>
-            </div>
-      </div>
-      <div class="horizontal card">
-            <div class="five columns">
-              <img src="/assets/logos/next.png" alt="NEXT JE Logo">
-            </div>
-            <div class="seven columns u-center">
-              <h5>NEXT JE (Croatia)</h5>
-              <p>Consultative Member</p>
-              <p><a href="http://nextje.hr/">nextje.hr</a></p>
-              <p>
-                <a class="social-link" href="https://www.facebook.com/NEXTje/"><i class="fab fa-facebook-f"></i></a>
-                <a class="social-link" href="https://www.instagram.com/nextjuniorenterprise/"><i class="fab fa-instagram"></i></a>
-              </p>
-            </div>
-      </div>
+      <% site.posts.forEach(function(confederation){ %>
+        <% if(confederation.type=='jade-member'){ %>
+          <%- partial('partial/confederation-card', { confederation: confederation }) %>
+        <% } %>
+      <% }) %>
+      <% site.posts.forEach(function(confederation){ %>
+        <% if(confederation.type=='consultative-member'){ %>
+          <%- partial('partial/confederation-card', { confederation: confederation }) %>
+        <% } %>
+      <% }) %>
     </div>
   </section>
 </div></div>
