--- a/themes/lyon-theme/layout/partial/navigation.ejs
+++ b/themes/lyon-theme/layout/partial/navigation.ejs
@@ -25,7 +25,7 @@
       <a href="#" onkeyup="openDropdown(event, 'map-menu');">JE Map</a>
       <div class="dropdown-content" id="map-menu">
         <a href="/map">Find a JE</a>
-        <a href="/map/edit-info">Add or edit my JE</a>
+        <a href="/insights/how-to-add-your-je-to-the-global-je-map/">Add or edit my JE</a>
       </div>
     </div>
     <a href="/start-a-je" class="highlight purple-hover">Start a JE</a>
