--- a/themes/lyon-theme/layout/partial/confederation-card.ejs
+++ b/themes/lyon-theme/layout/partial/confederation-card.ejs
@@ -19,7 +19,7 @@
           <% if ( confederation.instagram ) { %>
             <a class="social-link" href="<%- confederation.instagram %>"><i class="fab fa-instagram"></i></a>
           <% } %>
-          <% if ( confederation.instagram ) { %>
+          <% if ( confederation.twitter ) { %>
             <a class="social-link" href="<%- confederation.twitter %>"><i class="fab fa-twitter"></i></a>
           <% } %>
         </p>
