--- a/themes/lyon-theme/layout/partial/network-numbers.ejs
+++ b/themes/lyon-theme/layout/partial/network-numbers.ejs
@@ -1,16 +1,8 @@
-<% var networkNumbers %>
-<% site.posts.forEach(function(data){ %>
-  <% if(data.type=='data'){ %>
-    <% if(data.title=='network-numbers'){ %>
-      <% networkNumbers = data %>
-    <% } %>
-  <% } %>
-<% }) %>
 <section id="network-numbers" class="bg-gray">
   <div class="u-full-width container">
     <div class="row">
       <div class="three columns u-transparent u-button">
-        <span class="number"><%- networkNumbers.no_of_countries %></span>
+        <span class="number">44</span>
         <br>Countries
       </div>
       <div class="three columns u-transparent u-button">
@@ -57,7 +49,7 @@
           <%- number_format(thousand_projects, {precision: 1}) %>
         </span>
         <span class="symbol">K</span>
-        <br>Projects in <%- networkNumbers.last_year %>
+        <br>Projects in 2017
       </div>
     </div>
     <div class="row">
@@ -76,7 +68,7 @@
           <%- number_format(turnover_millions, {precision: 1}) %>
         </span>
         <span class="symbol">M</span>
-        <br>Turnover in <%- networkNumbers.last_year %>
+        <br>Turnover in 2017
       </div>
       <div class="seven columns u-transparent u-button">
         <span class="symbol">#1</span>
