--- a/themes/lyon-theme/layout/partial/network-numbers.ejs
+++ b/themes/lyon-theme/layout/partial/network-numbers.ejs
@@ -24,7 +24,7 @@
         <br>Countries
       </div>
       <div class="three columns u-transparent u-button">
-        <span class="number"><%- number_format(jes, {precision: 0, delimiter: ''}) %></span>
+        <span class="number"><%- number_format(jes, {precision: 0, delimiter: ""}) %></span>
         <br>Junior Enterprises
       </div>
       <div class="three columns u-transparent u-button">
