--- a/themes/lyon-theme/layout/partial/network-numbers.ejs
+++ b/themes/lyon-theme/layout/partial/network-numbers.ejs
@@ -24,7 +24,7 @@
         <br>Countries
       </div>
       <div class="three columns u-transparent u-button">
-        <span class="number"><%- return jes; %></span>
+        <span class="number"><%= jes %></span>
         <br>Junior Enterprises
       </div>
       <div class="three columns u-transparent u-button">
