--- a/themes/lyon-theme/layout/home.ejs
+++ b/themes/lyon-theme/layout/home.ejs
@@ -92,3 +92,7 @@
 
 <!-- Call-to-Action -->
 <%- partial('partial/newsletter-cta') %>
+
+<script>
+  var bubbleData = <%- process.env.home_page_map_db %>
+</script>
