--- a/themes/lyon-theme/source/assets/styles.css
+++ b/themes/lyon-theme/source/assets/styles.css
@@ -473,8 +473,11 @@ a.purple-hover:hover, a.purple-hover:focus {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .navbar-main, .navbar-highlights, .navbar-social { display: none; }
-@media (min-width: 750px) { .navbar-main, .navbar-highlights { display: block; } }
+@media (min-width: 750px) { .navbar-main, .navbar-highlights { display: block; } .menu.button { display: none; } }
 @media (min-width: 1000px) { .navbar-social { display: block; } }
+
+.menu.button { float: left; margin: 7px 0; padding: 10px; }
+.menu.button::after { content: " \f0c9"; font-family: 'Font Awesome 5 Free'; }
 
 /* Immersive/Hotsite Navigation
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
