--- a/themes/lyon-theme/layout/partial/navigation.ejs
+++ b/themes/lyon-theme/layout/partial/navigation.ejs
@@ -21,7 +21,6 @@
     <a href="/contact">Contact</a>
   </nav>
   <nav class="navbar-highlights">
-    <div class="menu button" role="button" tabindex="0">Menu</div>
     <div class="dropdown">
       <a href="#" onkeyup="openDropdown(event, 'map-menu');">JE Map</a>
       <div class="dropdown-content" id="map-menu">
@@ -40,4 +39,5 @@
       </a>
     </div>
   </nav>
+  <div class="menu button" role="button" tabindex="0" onclick="openMobileNav()">Menu</div>
 </div>
