--- a/themes/lyon-theme/layout/partial/mobile-navigation.ejs
+++ b/themes/lyon-theme/layout/partial/mobile-navigation.ejs
@@ -1,5 +1,5 @@
 <div id="mobileNav">
-  <div class="close u-button" tabindex="0" role="button" onclick="closeModal();">&times;</p>
+  <div class="close u-button" tabindex="0" role="button" onclick="closeMobileNav();">&times;</p>
   <a href="/">Home</a>
   <p class="cite">Who we are</p>
   <a href="/global-council">Global Council</a>
