--- a/themes/lyon-theme/layout/partial/mobile-navigation.ejs
+++ b/themes/lyon-theme/layout/partial/mobile-navigation.ejs
@@ -1,5 +1,5 @@
 <div id="mobileNav">
-  <div class="close u-button" tabindex="0" role="button" onclick="closeMobileNav();">&times;</div>
+  <p class="close u-button" tabindex="0" role="button" onclick="closeMobileNav();">&times;</p>
   <a href="/">Home</a>
   <p class="cite">Who we are</p>
   <a href="/global-council">Global Council</a>
@@ -13,5 +13,5 @@
   <a href="/insights/how-to-add-your-je-to-the-global-je-map/">Add or edit my JE</a>
   <p class="cite">More</p>
   <a href="/contact">Contact</a>
-  <a class="button purple-hover" href="/start-a-je">Start a JE</a>
+  <p><a class="button purple-hover" href="/start-a-je">Start a JE</a></p>
 </div>
