--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -40,7 +40,7 @@
   </head>
   <body>
     <%- partial('partial/mobile-navigation')%>
-    <div class="main">
+    <div id="main">
       <!-- Website Header -->
         <%- partial('partial/navigation')%>
       <!-- Page Content -->
