Mobile Menu Finalized

--- a/themes/lyon-theme/layout/partial/mobile-navigation.ejs
+++ b/themes/lyon-theme/layout/partial/mobile-navigation.ejs
@@ -9,10 +9,11 @@
     <a href="/concept">The JE Concept</a>
     <a href="/confederations">Confederations</a>
     <a href="/insights">Insights</a>
-    <a href="/contact">Contact</a>
     <p class="cite">JE Map</p>
     <a href="/map">Find a JE</a>
     <a href="/insights/how-to-add-your-je-to-the-global-je-map/">Add or edit my JE</a>
+    <p class="cite">More</p>
+    <a href="/contact">Contact</a>
   </div>
   <p><a class="button purple-hover" href="/start-a-je">Start a JE</a></p>
 </div>
