--- a/themes/lyon-theme/source/assets/styles.css
+++ b/themes/lyon-theme/source/assets/styles.css
@@ -490,12 +490,13 @@ a.purple-hover:hover, a.purple-hover:focus {
   background-color: #323232;
   color: #fff;
   overflow-x: hidden;
-  transition: .3s ease-in right;
+  transition: .3s ease-out right;
   font-size: 14px;
 }
-#main { transform: translateX(0); transition: .3s ease-in transform; }
+#main { transform: translateX(0); transition: .3s ease-out transform; }
 
 #mobileNav p { text-align: center; padding: 9px; }
+#mobileNav .button { margin-bottom: 18px; }
 .mobile-nav a { color: #fff; transition: 0.15s ease-in all; font-weight: bold; display: block; padding: 18px; }
 .mobile-nav a:focus, .mobile-nav a:hover { color: #24a1c8; background-color: #fff; text-decoration: none; }
 .mobile-nav a, .mobile-nav p { width: 100%; margin: 0; box-sizing: border-box; }
