--- a/themes/lyon-theme/layout/partial/navigation.ejs
+++ b/themes/lyon-theme/layout/partial/navigation.ejs
@@ -1,4 +1,4 @@
-<div class="<% if(page.immersive){ %>immersive<% } %> navbar" id="navigation">
+<div class="<% if(page.immersive){ %>immersive<% } %><% if(page.bottomnav){ %>bottomnav<% } %> navbar" id="navigation">
   <a href="/" class="navbar-logo"><img src="/assets/logos/juniorenterprises.svg" alt="Junior Enterprises Logo"></a>
   <nav class="navbar-main">
     <a href="/">Home</a>
