--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -35,6 +35,11 @@
         <script defer src="https://www.google.com/recaptcha/api.js"></script>
       <% } %>
     <!-- Favicon -->
+      <% if( page.title == 'Map' ){ %>
+        <link rel="stylesheet" type="text/css" href="/assets/mapstyles.css">
+        <script defer src="/assets/mapscripts.js"></script>
+      <% } %>
+    <!-- Favicon -->
       <%- partial('partial/favicon')%>
     <!-- End of Head -->
   </head>
