--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -36,8 +36,8 @@
       <% } %>
     <!-- Favicon -->
       <% if( page.title == 'Map' ){ %>
-        <link rel="stylesheet" type="text/css" href="/assets/mapstyles.css">
-        <script defer src="/assets/mapscripts.js"></script>
+        <link rel="stylesheet" type="text/css" href="/assets/map-styles.css">
+        <script defer src="/assets/map-scripts.js"></script>
       <% } %>
     <!-- Favicon -->
       <%- partial('partial/favicon')%>
